test/asm/readfile-nonexist.err
error: readfile-nonexist.asm(1):
    Error opening READFILE file 'readfile-nonexist.inc': No such file or directory
Assembly aborted with 1 error!
